# confluence-skill

./: .confluence.example.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVARMOR_MIGRATION.md  LICENSE  PRODUCTION_GUIDE.md  README.md  SECURITY.md  SKILL.md  SKILL_MANIFEST.json  __init__.py  config.example.yaml  config.schema.json  doc_generators.py  mcp.py  pull_request_template.md  pyproject.toml  skill.py
.claude/: CLAUDE.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-private.yml  test.yml
confluence_skill/: __init__.py  _version.py  code_scanner.py  confluence_client.py  guardrails.py  jira_integration.py  mcp.py  models.py  page_hierarchy.py  skill.py
confluence_skill/tests/: conftest.py  test_cli.py  test_config_merging.py  test_confluence_client.py  test_confluence_client_extended.py  test_devarmor_integration.py  test_doc_generators.py  test_guardrails.py  test_jira_integration.py  test_jira_integration_extended.py  test_mcp.py  test_models.py  test_page_hierarchy.py  test_skill_advanced.py  test_skill_core.py  test_skill_exception_handling.py  test_skill_integration.py
docs/: ARCHITECTURE.md  SKILL_DEVELOPMENT.md  TEMPLATES.md
examples/: basic_usage.py  config_merging.py  full_workflow.py
scripts/: sync_version.py
tests/: __init__.py  test_config_merging.py  test_doc_generators.py  test_guardrails.py
