[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "confluence-skill"
version = "1.2.0"
description = "Enterprise-grade Confluence Cloud documentation skill for Claude with Jira integration"
authors = ["Craig Hoad <craig@craighoad.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rhyscraig/confluence-skill"
keywords = ["confluence", "documentation", "jira", "cloud", "enterprise", "claude", "skill", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Documentation",
    "Topic :: Internet",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.0"
rich = "^14.3.0"
pyyaml = "^6.0.2"
jsonschema = "^4.20.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.15.0"
black = "^26.3.1"
mypy = "^1.8.0"
bandit = "^1.9.0"
pip-audit = "^2.10.0"
checkov = "^3.2.510"
setuptools-scm = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests (requires credentials)",
    "security: security-related tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise AssertionError",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py312"
select = [
    "E", "F", "W",      # pycodestyle, pyflakes, pycodestyle warnings
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "C4",               # flake8-comprehensions
    "ARG",              # flake8-unused-arguments
    "RUF",              # Ruff-specific
]
ignore = [
    "E501",             # Line too long (black handles this)
    "ARG001",           # Unused function argument (common in protocols)
]

[tool.black]
line-length = 120
target-version = ["py312"]
